--- a/.github/workflows/fod-scan.yml
+++ b/.github/workflows/fod-scan.yml
@@ -1,8 +1,15 @@
-steps:
-  - name: Hello world
-    on: [push]
-    run: echo Hello world $FIRST_NAME $middle_name $Last_Name!
-    env:
-      FIRST_NAME: Sushant
-      middle_name: Kumar
-      Last_Name: Kaushik
+name: FOD Scan
+
+on: [push]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Hello world
+      run: echo Hello world $FIRST_NAME $middle_name $Last_Name!
+      env:
+        FIRST_NAME: Sushant
+        middle_name: Kumar
+        Last_Name: Kaushik
