--- a/.github/workflows/fod-scan.yml
+++ b/.github/workflows/fod-scan.yml
@@ -7,8 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-        -name: Hello world
-        run: echo Hello world $FIRST_NAME $middle_name $Last_Name!
+        - run: echo Hello world $FIRST_NAME $middle_name $Last_Name!
         env:
           FIRST_NAME: Sushant
           middle_name: Kumar
