--- a/.github/workflows/fod-scan.yml
+++ b/.github/workflows/fod-scan.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: Hi from GitHub Action !!   
+      - run: echo Hi from GitHub Action !!   
