--- a/.github/workflows/fod-scan.yml
+++ b/.github/workflows/fod-scan.yml
@@ -7,4 +7,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo Hi from GitHub Action !!   
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - uses: fortify-actions/setup-scancentral-client@v1
+      - uses: fortify-actions/setup-fod-uploader@v1
+      - run: npm install
+      - run: scancentral package -bt mvn -o package.zip
+      - run: java -jar $FOD_UPLOAD_JAR -bsi "$FOD_BSI" -z package.zip -uc "$FOD_USER" "$FOD_PWD" -ep 2 -pp 1
+        env:
+          FOD_BSI: ${{ secrets.FOD_BSI }}
+          FOD_USER: ${{ secrets.FOD_USER }}
+          FOD_PWD: ${{ secrets.FOD_PWD }}
+	with:
+	  base-url: https://sandbox.fortify.com
+          tenant: Equifax	  
+      - uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: scancentral-logs
+          path: ~/.fortify/scancentral/log
